gitops/2048-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2048
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-2048
  template:
    metadata:
      labels:
        app: app-2048
    spec:
      priorityClassName: app-workload
      containers:
        - name: app-2048
          image: acrtahmidaks.azurecr.io/2048-app:1922212b4405e6e35bdf4cb59f5e663b1eec929a
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              memory: 64Mi
