gitops/2048-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-2048
spec:
  type: ClusterIP
  selector:
    app: app-2048
  ports:
    - port: 80
      targetPort: 8080
