gitops/2048-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-2048
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 2048.azure.tahmidchoudhury.uk
      secretName: app-2048-tls
  rules:
    - host: 2048.azure.tahmidchoudhury.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-2048
                port:
                  number: 80
